src/components/planets/planet.css
/* typography */

.planet-container h3 {
  color: var(--clr-primary-100);
}
#planet {
  font-family: var(--ff-primary);
  color: var(--clr-primary-100);
  letter-spacing: 0.05rem;
  text-align: center;
  padding-left: 2rem;
  padding-right: 2rem;
  font-size: smaller;
}

#planet h2 {
  font-size: 2.5rem;
  font-weight: 200;
  font-family: var(--ff-primary);
  text-transform: uppercase;
  color: inherit;
  letter-spacing: 0.6rem;
}

#planet h3 {
  font-size: 1rem;
  font-weight: 200;
  font-family: var(--ff-primary);
  text-transform: uppercase;
  color: inherit;
  letter-spacing: 0.3rem;
}
#planet h4 {
  font-size: 1rem;
  font-weight: 200;
  font-family: var(--ff-primary);
  text-transform: uppercase;
  color: inherit;
  letter-spacing: 0.3rem;
}

/* layout */
#planet {
  align-items: center;
  justify-content: center;
  align-content: center;
  width: 100%;
  padding-top: 4rem;
  padding-bottom: 3rem;
}
.flex-auto {
  flex: auto;
}

@media screen and (min-width: 960px) {
  .content {
    width: 80%;
    margin-left: 5rem;
    margin-right: 3rem;
  }

  .planet-stats-first {
    margin-left: 5rem;
    margin-right: 1rem;
  }
  .planet-stats-middle {
    margin-left: 1rem;
    margin-right: 1rem;
  }
  .planet-stats-last {
    margin-left: 1rem;
    margin-right: 5rem;
  }
}

@media screen and (min-width: 1024px) {
  .planet-activities-container {
    margin-bottom: 2rem;
  }
}

@media screen and (min-width: 960px) {
  .planet-activities-container {
    margin-top: 2rem;
    width: min(70%, 70rem);
    margin-inline: auto;
    margin-left: auto;
    margin-right: auto;
  }
  .planet-info-container {
    bottom: 2rem;
    margin-inline: auto;
    margin-left: auto;
    margin-right: auto;
    text-align: left;
  }
  .map-header {
    margin-bottom: 5rem;
    width: min(40%, 70rem);
    margin-inline: auto;
    margin-left: auto;
    margin-right: auto;
  }
}
.flex-centered {
  -moz-align-items: center;
  -webkit-align-items: center;
  -ms-align-items: center;
  justify-content: center;
  justify-items: center;
  align-items: center;
  text-align: center;
  display: flex;
  flex-direction: column;
}

.planet-content-container {
  -moz-align-items: center;
  -webkit-align-items: center;
  -ms-align-items: center;
  align-items: center;
  width: min(100%, 70rem);
  padding-bottom: auto;
  text-align: center;
}
.header-container {
  margin-bottom: 3rem;
}

.planet-container {
  -moz-align-items: center;
  -webkit-align-items: center;
  -ms-align-items: center;
  align-items: center;
  width: min(100%, 70rem);
  padding-bottom: auto;
  text-align: center;
}
.planet-container article article {
  text-align: center;
}
.desktop {
  display: none;
}

@media screen and (min-width: 960px) {
  .planet-container {
    margin-inline: auto;
    margin-left: auto;
    margin-right: auto;
    /* width: min(90%, 70rem); */
    align-items: flex-start;
    border-radius: 10px;
  }
  .mobile {
    display: none;
  }
  .desktop {
    display: contents;
  }
}

.planet-split {
  display: flex;
  flex-direction: column;
}

@media screen and (min-width: 1020px) {
  .planet-split {
    margin-bottom: 5rem;
  }
}

@media (min-width: 960px) {
  .planet-split {
    flex-direction: row;
  }
  .planet-split > * {
    flex-basis: 100%;
  }
}
@media screen and (min-width: 480px) {
  .underline {
    width: 70%;
    margin-bottom: 25px;
  }
  .underline-places {
    width: 70%;
    margin-top: 1rem;
  }
}

@media screen and (min-width: 960px) {
  #planet h2 {
    align-self: flex-start;
    justify-self: left;
    margin-right: -100px;
  }
  .underline {
    width: 65%;
    height: 0.1rem;
    margin-left: -2rem;
    background-color: white;
    margin-bottom: 25px;
  }
  .underline-places {
    width: 20%;
    height: 0.1rem;
    margin-right: -2rem;
    background-color: white;
    align-self: center;
    margin-left: 1rem;
    margin-top: 0;
  }
  .places-header {
    display: flex;
    width: min(60%, 70rem);
    margin-inline: auto;
    margin-left: auto;
    margin-right: auto;
    justify-content: center;
  }
  .places-header h3 {
    justify-self: center;
  }
  .planet-name {
    margin-bottom: 0;
  }

  .planet-description {
    margin-bottom: 0 !important;
    letter-spacing: 0.06rem;
    margin-right: auto;
    text-align: justify;
    justify-content: center;
    align-content: center;
    align-self: center;
  }
  .sidebar {
    display: flex;
    padding: 1rem !important;
    margin-bottom: 0 !important;
    letter-spacing: 0.06rem;
    margin-left: auto;
    margin-right: auto;
    text-align: right;
    justify-content: center;
    align-content: right;
    align-self: center;
  }
}
@media screen and (max-width: 960px) {
  .sidebar {
    flex-direction: row;
    border-right: none;
    text-align: center;
  }
}

@media screen and (max-width: 960px) {
  .planet-description {
    border-left: none;
  }
}

.inline-block {
  display: inline-block;
}

.planet-description {
  display: flex;
  flex-direction: column;
  align-items: center;
}

@media screen and (min-width: 960px) {
  .border {
    border-bottom: none;
  }
}

.not-found p {
  margin-bottom: 0;
}

.border-radius {
  border-radius: 10px;
}

.padding-places {
  padding: 1rem;
}

.padding-botton-3rem {
  padding-bottom: 3rem;
}

.padding-1rem {
  padding: 1rem;
}

.padding-3rem {
  padding: 3rem;
}

.margin-1rem {
  margin: 1rem;
}

#planet .button-margin {
  margin: 0.5rem auto !important;
}

.margin-block-planet-container {
  margin: auto;
}

.logo img {
  width: 35% !important;
}

@media screen and (min-width: 420px) {
  .logo img {
    /* width: 20% !important; */
    width: 50% !important;
  }
}
@media screen and (max-width: 420px) {
  .logo img {
    width: 50% !important;
  }
}

/* carousel customization */
.carousel-card {
  background-color: rgba(0, 0, 0, 0.3);
  margin: 0.5rem;
  border-radius: 15px;
}

.alice-carousel {
  padding-bottom: 2rem;
  color: inherit;
}

.alice-carousel__prev-btn {
  text-align: center !important;
}
/* ... */

